tests/ui/consts/recursive-zst-static.default.stderr
error[E0391]: cycle detected when const-evaluating + checking `FOO`
  --> $DIR/recursive-zst-static.rs:10:1
   |
LL | static FOO: () = FOO;
   | ^^^^^^^^^^^^^^
   |
note: ...which requires const-evaluating + checking `FOO`...
  --> $DIR/recursive-zst-static.rs:10:18
   |
LL | static FOO: () = FOO;
   |                  ^^^
   = note: ...which again requires const-evaluating + checking `FOO`, completing the cycle
note: cycle used when elaborating drops for `main`
  --> $DIR/recursive-zst-static.rs:13:5
   |
LL |     FOO
   |     ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
